[gd_scene load_steps=6 format=3 uid="uid://dik6ufaanpog5"]

[ext_resource type="Script" uid="uid://b5ildpusavvcn" path="res://menu/main_menu/main_menu.gd" id="1_06t4h"]

[sub_resource type="Theme" id="Theme_rhts7"]
Button/font_sizes/font_size = 50

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rhts7"]
bg_color = Color(1, 0.647059, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_06t4h"]
bg_color = Color(1, 0.647059, 0, 0.196078)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7vrkn"]
bg_color = Color(1, 1, 1, 1)
border_color = Color(0, 0, 0, 1)

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource("1_06t4h")

[node name="main_menu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="main_menu"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.5
grow_horizontal = 2

[node name="ColorRect2" type="ColorRect" parent="main_menu"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
color = Color(1, 0.647059, 0, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="main_menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -125.0
offset_right = 150.0
offset_bottom = 125.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_rhts7")
theme_override_constants/separation = 20
alignment = 1

[node name="Start" type="Button" parent="main_menu/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_rhts7")
action_mode = 0
text = "START"

[node name="Options" type="Button" parent="main_menu/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_06t4h")
action_mode = 0
text = "OPTIONS"

[node name="Quit" type="Button" parent="main_menu/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.647059, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_7vrkn")
action_mode = 0
text = "QUIT"

[connection signal="pressed" from="main_menu/VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="main_menu/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="main_menu/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="main_menu/VBoxContainer/Quit" to="main_menu" method="_on_quit_pressed"]
